# cursopythonbackend

./: README.md  animal.py  calculadora.py  calculadora_acessorio.py  gerenciador_estoque.py  pyproject.toml
